--- a/index.html
+++ b/index.html
@@ -56,9 +56,12 @@
 
 <!-- ============================== End Hader Area ======================== -->
 
+
+
+<!-- ============================== Start Main Area ======================== -->
 <main class="site-main">
 
-<!-- ========= Start Banner Area =========== -->
+    <!-- ========= Start Banner Area =========== -->
         <section class="site-banner">
             <div class="container">
                 <div class="row">
@@ -80,16 +83,47 @@
                 </div>
             </div>
         </section>
-<!-- ========= End Banner Area ============= -->
+    <!-- ========= End Banner Area ============= -->
  
+    <!-- ========= Start About Area ============= -->
+
+    <section class="about-area">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-lg-6 col-md-12">
+                    <div class="about-image">
+                        <img src="./img/about-us.png" alt="About Us" class="img-fluid">
+                    </div>
+                </div>
+
+
+                <div class="col-lg-6 col-md-12 about-title">
+                    <h2 class="text-uppercase pt-5">
+                        <span>Let Me</span>
+                        <span>Introduce</span>
+                        <span>Myself</span>
+                    </h2>
+
+                    <div class="paragraph py-4 w-75">
+                        <p class="para">
+                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Animi obcaecati perspiciatis enim, dolores similique laborum doloribus architecto autem quo consectetur.
+                        </p>
+
+                        <p class="para">
+                            It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here',
+                        </p>
+                    </div>
+
+                    <button type="button" class="btn button primary-button text-uppercase">Download cv</button>
+                </div>
+            </div>
+        </div>
+    </section>
+    
+    <!-- ========= End About Area ============= -->
+
 
 </main>
-
- <!-- ============================== Start Main Area ======================== -->
-
-
-
-
 
  <!-- ============================== End Main Area ======================== -->
 
