--- a/index.html
+++ b/index.html
@@ -223,6 +223,89 @@
         <!--  ======================== End Brand Area ==============================  -->
 
 
+        <!--  ======================== Start Services Area ==============================  -->
+        <seciton class="services-area">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-12">
+                        <h1 class="text-uppercase title-text text-center services-title">Services Offers</h1>
+                        <p class="para">
+                            There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.
+                        </p>
+                    </div>
+                </div>
+
+                <div class="container-services-list">
+                    <div class="row">
+                        <div class="col-lg-3 col-md-6 col-sm-12">
+                            <div class="services">
+                                <div class="sevices-img text-center py-4">
+                                    <img src="./img/services/s1.png" alt="Services-1">
+                                </div>
+
+                                <div class="card-body text-center">
+                                    <h5 class="card-title text-uppercase font-roboto">Wp Developer</h5>
+                                    <p class="card-text text-secondary">
+                                        Lorem ipsum dolor sit amet consectetur adipisicing elit Harum suscipit.
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col-lg-3 col-md-6 col-sm-12">
+                            <div class="services">
+                                <div class="sevices-img text-center py-4">
+                                    <img src="./img/services/s2.png" alt="Services-2">
+                                </div>
+
+                                <div class="card-body text-center">
+                                    <h5 class="card-title text-uppercase font-roboto">UX/UI Design</h5>
+                                    <p class="card-text text-secondary">
+                                        Lorem ipsum dolor sit amet consectetur adipisicing elit Harum suscipit.
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+
+
+                        <div class="col-lg-3 col-md-6 col-sm-12">
+                            <div class="services">
+                                <div class="sevices-img text-center py-4">
+                                    <img src="./img/services/s3.png" alt="Services-3">
+                                </div>
+
+                                <div class="card-body text-center">
+                                    <h5 class="card-title text-uppercase font-roboto">Web Design</h5>
+                                    <p class="card-text text-secondary">
+                                        Lorem ipsum dolor sit amet consectetur adipisicing elit Harum suscipit.
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+
+
+                        <div class="col-lg-3 col-md-6 col-sm-12">
+                            <div class="services">
+                                <div class="sevices-img text-center py-4">
+                                    <img src="./img/services/s4.png" alt="Services-4">
+                                </div>
+
+                                <div class="card-body text-center">
+                                    <h5 class="card-title text-uppercase font-roboto">SEO Optimize</h5>
+                                    <p class="card-text text-secondary">
+                                        Lorem ipsum dolor sit amet consectetur adipisicing elit Harum suscipit.
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </seciton>
+        <!--  ======================== End Services Area ==============================  -->
+
+ 
 
 </main>
 
